给我提交上去

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="icon" href="favicon.ico"><title>网易云阅读-海量免费小说、图书，免费畅读</title><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1,user-scalable=no"><script defer="defer" src="static/js/chunk-vendors.ee6d8b5e.js"></script><script defer="defer" src="static/js/app.05a8363d.js"></script><link href="static/css/chunk-vendors.74aae9a2.css" rel="stylesheet"><link href="static/css/app.8dd03f6e.css" rel="stylesheet"></head><style>/* *{
       padding: 0;
       margin: 0;
-    } */</style><body><noscript><strong>We're sorry but myfirstproject doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+    } */</style><body><noscript><strong>We're ssorry but myfirstproject doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
